discussion/kv_engine/184882/184882_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge remote-tracking branch 'couchbase/mad-hatter' into cheshire-cat

* couchbase/mad-hatter:
  MB-54975: Update Ephemeral replica memory stats on DEL_VBUCKET

Change-Id: Iebc9b76bf99c8394ad0db95d2626b6c21516d90e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2023-01-12 17:44:46.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-12 17:45:03.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332124/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-12 17:59:10.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/383/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: no viable conversion from "const Vbid" to "gsl::not_null<const void *>"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/383/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/378/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37: error: no viable conversion from "const Vbid" to "gsl::not_null<const void *>" [clang-diagnostic-error]
              engine->deleteVBucket(vbid, false, cookie));
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/googletest/googletest/include/gtest/gtest.h:2028:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/googletest/googletest/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/googletest/googletest/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/googletest/googletest/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/gsl-lite/include/gsl/gsl-lite.hpp:1131:29: note: candidate constructor not viable: no known conversion from "const Vbid" to "gsl::not_null<const void *> &&" for 1st argument
    gsl_api gsl_constexpr   not_null( not_null &&      other ) = default;
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/gsl-lite/include/gsl/gsl-lite.hpp:1132:29: note: candidate constructor not viable: no known conversion from "const Vbid" to "const gsl::not_null<const void *> &" for 1st argument
    gsl_api gsl_constexpr   not_null( not_null const & other ) = default;
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/gsl-lite/include/gsl/gsl-lite.hpp:1171:13: note: candidate constructor not viable: no known conversion from "const Vbid" to "std::nullptr_t" (aka "nullptr_t") for 1st argument
    gsl_api not_null(             std::nullptr_t ) gsl_is_delete;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/gsl-lite/include/gsl/gsl-lite.hpp:1118:5: note: candidate template ignored: requirement "std::is_constructible<const void *, const Vbid &>::value" was not satisfied [with U = const Vbid &]
    not_null( U && u )
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/gsl-lite/include/gsl/gsl-lite.hpp:1150:27: note: candidate template ignored: could not match "not_null<type-parameter-0-0>" against "const Vbid"
    gsl_api gsl_constexpr not_null( not_null<U> const & other )
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.h:879:62: note: passing argument to parameter "cookie" here
    cb::engine_errc deleteVBucket(gsl::not_null<const void*> cookie,
                                                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/378/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: no viable conversion from "const Vbid" to "gsl::not_null<const void *>" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/378/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/552/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\ephemeral_bucket_test.cc(254): error C2664: "cb::engine_errc EventuallyPersistentEngine::deleteVBucket(gsl::not_null<const void *>,Vbid,bool)": cannot convert argument 1 from "const Vbid" to "gsl::not_null<const void *>" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/552/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/395/ : FAILURE

Compile error at [2023-01-12T17:50:54.449Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: no viable conversion from "const Vbid" to "gsl::not_null<const void *>"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/395/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/408/ : FAILURE

Compile error at [2023-01-12T17:53:05.089Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: no viable conversion from "const Vbid" to "gsl::not_null<const void *>"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/408/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/392/ : FAILURE

Compile error at [2023-01-12T17:51:54.482Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: cannot convert ?const Vbid? to ?gsl::not_null<const void*>?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/392/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/386/ : FAILURE

Compile error at [2023-01-12T17:51:05.908Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: cannot convert ?const Vbid? to ?gsl::not_null<const void*>?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/386/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/309/ : FAILURE

Compile error at [2023-01-12T17:57:02.350Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: cannot convert ?const Vbid? to ?gsl::not_null<const void*>?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/309/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/404/ : FAILURE

Compile error at [2023-01-12T17:48:05.788Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: no viable conversion from "const Vbid" to "gsl::not_null<const void *>"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/404/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22109/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
